--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            
+            ]
           },
           "configurations": {
             "production": {
@@ -124,5 +126,8 @@
       }
     }
   },
-  "defaultProject": "angular11app"
+  "defaultProject": "angular11app",
+  "cli": {
+    "analytics": "1a3b1544-390e-4256-982d-70baef6ea78d"
+  }
 }
