--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "bootstrap": "^5.0.2",
+    "chart.js": "^3.4.1",
+    "ng2-charts": "^2.4.2",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
